--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-transformers
-datasets
-accelerate
-bitsandbytes
-flash-attn
-fastapi
-uvicorn
-huggingface_hub
-termcolor
-pygments
-sqlalchemy
-diffusers
+torch==2.7.1
+transformers==4.51.3
+datasets==4.0.0
+accelerate==1.9.0
+flash-attn==2.8.1
+fastapi==0.116.1
+uvicorn==0.35.0
+huggingface_hub==0.33.4
+pygments==2.19.2
+sqlalchemy==2.0.41
+websockets==15.0.1
+numpy==2.3.1
+pywebview==5.4
